# MSL-Bench

./: .gitignore  CLAUDE.md  Makefile  NOTES.md  README.md  REPORT.md  pyproject.toml
demo/: index.html  leaderboard.html
docs/: phase2.5-heldout-plan.md  phase6-flywheel-plan.md
mkb/: __init__.py  compile.py  execute.py  problems.py  score.py  timing.py  verify.py
mkb/llm/: generate.py  providers.py
phase6/: lora_config.json  lora_config_v2.json  prepare_data.py
problems/tier1_elementwise/p001_vector_add/: README.md  spec.py
problems/tier1_elementwise/p002_relu/: README.md  spec.py
problems/tier1_elementwise/p003_elementwise_mul/: spec.py
problems/tier1_elementwise/p004_scalar_mul/: spec.py
problems/tier1_elementwise/p005_leaky_relu/: spec.py
problems/tier1_elementwise/p006_axpby/: spec.py
problems/tier1_elementwise/p007_sigmoid/: spec.py
problems/tier1_elementwise/p008_tanh/: spec.py
problems/tier1_elementwise/p009_neg/: spec.py
problems/tier1_elementwise/p010_abs/: spec.py
problems/tier1_elementwise/p011_exp/: spec.py
problems/tier1_elementwise/p012_clamp/: spec.py
results/tables/: leaderboard.md
runner/: Package.swift
scripts/: export_sft.py  make_demo.py  make_leaderboard.py  make_thumbnail.py  preflight.py  reverify.py  run_problem.py  run_suite.py
tests/: test_harness.py  test_llm.py  test_verify_score.py
tests/golden_kernels/: abs.metal  axpby.metal  clamp.metal  elementwise_mul.metal  exp.metal  leaky_relu.metal  relu.metal  scalar_mul.metal  sigmoid.metal  square.metal  tanh.metal  vector_add.metal
(+129 files in other folders)
